--- a/comment.html
+++ b/comment.html
@@ -1,102 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Commenting System</title>
-</head>
-<body>
-  <h1>Commenting System</h1>
-  <form id="comment-form">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    
-    <label for="comment">Comment:</label>
-    <textarea id="comment" name="comment" rows="4" required></textarea>
-    
-    <button type="submit">Submit Comment</button>
-  </form>
-
-  <h2>Comments</h2>
-  <div id="comments-container"></div>
-
-  <script>
-    const SPREADSHEET_ID =  '1uen4iWMdljO1YxzwAmLsi7bdfBE9Ah_qwrBbdRtptIk';
-    const API_KEY = 'AIzaSyBDGL5m129y7EI8_urEc0mLSoxl53s_v2A';
-
-    document.getElementById('comment-form').addEventListener('submit', submitComment);
-
-    function submitComment(event) {
-      event.preventDefault();
-
-      const name = document.getElementById('name').value;
-      const comment = document.getElementById('comment').value;
-
-      const data = {
-        Name: name,
-        Comment: comment,
-        Timestamp: new Date().toLocaleString()
-      };
-
-      // Send the comment data to Google Sheets using the Google Sheets API
-      fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SPREADSHEET_ID}/values/Sheet1?valueInputOption=RAW`, {
-        method: 'POST',
-        headers: {
-          'Authorization': `Bearer ${API_KEY}`,
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          values: [[name, comment, new Date().toLocaleString()]]
-        })
-      })
-      .then(response => {
-        if (response.ok) {
-          console.log('Comment submitted successfully!');
-          document.getElementById('comment-form').reset();
-          loadComments();
-        } else {
-          console.error('Error submitting comment:', response.statusText);
-        }
-      })
-      .catch(error => {
-        console.error('Error submitting comment:', error);
-      });
-    }
-
-    function loadComments() {
-      // Fetch comments from Google Sheets using the Google Sheets API
-      fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SPREADSHEET_ID}/values/Sheet1`, {
-        headers: {
-          'Authorization': `Bearer ${API_KEY}`
-        }
-      })
-      .then(response => response.json())
-      .then(data => {
-        const values = data.values;
-        const commentsContainer = document.getElementById('comments-container');
-        commentsContainer.innerHTML = '';
-
-        if (values && values.length > 1) {
-          for (let i = 1; i < values.length; i++) {
-            const [name, comment, timestamp] = values[i];
-            const commentHTML = `
-              <div>
-                <strong>${name}</strong> - ${timestamp}<br>
-                ${comment}
-              </div>
-              <hr>
-            `;
-            commentsContainer.innerHTML += commentHTML;
-          }
-        } else {
-          commentsContainer.innerHTML = '<p>No comments yet.</p>';
-        }
-      })
-      .catch(error => {
-        console.error('Error loading comments:', error);
-      });
-    }
-
-    // Load comments when the page loads
-    loadComments();
-  </script>
-</body>
-</html>
+<div id="cusdis_thread"
+    data-host="https://cusdis.com"
+    data-app-id="f03751c6-eca3-455d-b903-35bb2eaa661e"
+    data-page-id="{{ PAGE_ID }}"
+    data-page-url="{{ PAGE_URL }}"
+    data-page-title="{{ PAGE_TITLE }}"
+  </div>
+  <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+  
